# form-template

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/templates/: sample_templates.json
tests/: test_data.json  test_requests.py
