[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Timur Galiev <timurgravirovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.13"}
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
motor = "^3.6.0"
requests = "^2.32.3"
pytest = "^8.3.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
